# cbc

./: .gitignore  CMakeLists.txt  Makefile  cbc  defs.h  gameboy  gameboy.c  gameboy.h  justfile  main.c  main.py  opcodes.c  opcodes.h  output.asm  output.s  rom.txt  sandbox.c  sandbox2.c
Include/: cbc.h  defs.h  log.h
default_rom/: CMakeLists.txt  Makefile  default_rom.asm  default_rom.gb  default_rom.sym  default_rom_cgb.gb
src/: cart.c  cart.h  cbc.c  cbc.code-workspace  defs.c  gameboy.c  gameboy.h  log.c  main.c  opcodes.c  opcodes.h  utils.c  utils.h
